--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 body{
     font-family: 'Roboto', sans-serif;
+    background-image: url("images/patt.png");
 }
 .container{
     width: 1200px;
@@ -11,7 +12,12 @@ body{
     padding: 0 15px;
     margin: 0 auto;
 }
-
+.header{
+    display: flex;
+    height: 100px;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.75);
+}
 .row{
     margin-left: -15px;
     margin-right: -15px;
