--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@ body{
     font-family: 'Roboto', sans-serif;
     background-image: url("images/patt.png");
 }
+a{
+    text-decoration: none;
+}
+li{
+    list-style-type: none;
+}
+
 .container{
     width: 1200px;
     max-width: 1200px;
@@ -36,6 +43,10 @@ body{
     flex: 0 0 50%;
     max-width: 50%;
 }
+.col-9{
+    flex: 0 0 75%;
+    max-width: 75%;
+}
 .menu{
     display: flex;
 }
@@ -54,4 +65,121 @@ body{
     color: #2c71b8;
     line-height: 50px;
     text-align: center;
+}
+.logo{
+    margin-top: 8px;
+}
+.form-search{
+    margin-top: 5px;
+    display: flex;
+    justify-content: space-between;
+    width: 200px;
+    height: 40px;
+    border: 1px solid #2c71b8;
+    line-height: 50px;
+
+}
+.icon-serch{
+   
+    height: 30px;
+    width: 30px;
+    background-image: url("images/icon_serch.png");
+    background-size: 13px 13px;
+    background-color: #2c71b8;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 5px;
+}
+.d-flex{
+    display: flex;
+    justify-content: space-between;
+}
+.but-search{
+    text-decoration: none;
+    font-size: 21px;
+    color: #2c71b8;
+    border: none;
+    outline: none;
+    background: transparent;
+    margin-left: 20px;
+    font-family: 'Roboto', sans-serif;
+}
+.but-bascet{
+    height: 40px;
+    width: 40px;
+    background: white;
+    background-image: url("images/bascet.png");
+    background-repeat:no-repeat;
+    background-position:center;
+    border: none;
+    margin-top: 5px;
+    position: relative;
+}
+.products-count{
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    background: #2c71b8;
+    position: absolute;
+    color: white;
+    top: -10px;
+    left:-10px;
+    text-align: center;
+}
+.slider{
+    width: 100%;
+    height: 400px;
+    background-color:#2c6096;
+    opacity: .7;
+    border-bottom: solid 1px white;
+}
+.h-slider{
+    position: absolute;
+    top: 35%;
+    left:40%;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 100px;
+   
+    
+}
+.filter{
+    width: 270px;
+    height: 840px;
+    border: solid 1px white;
+    color: white;
+    padding: 30px 30px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 21px;
+    line-height: 40px;
+}
+.filter li {
+    font-size: 21px;
+    line-height: 40px;
+    padding-left: 5px;
+}
+.filter h1 {
+    font-weight: bold;
+}
+
+.but-show{
+    border:none;
+    width: 210px;
+    background-color: transparent;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 21px;
+
+}
+.but-filter{
+    height: 50px;
+    width: 210px;
+    background-color:#2c71b8;
+    border:solid 1px white;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 21px;
+}
+.p-filter{
+    margin-top: 45px;
 }
