--- a/style.css
+++ b/style.css
@@ -12,7 +12,11 @@ a{
 li{
     list-style-type: none;
 }
-
+p{
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    font-size: 21px;   
+}
 .container{
     width: 1200px;
     max-width: 1200px;
@@ -46,6 +50,7 @@ li{
 .col-9{
     flex: 0 0 75%;
     max-width: 75%;
+    padding: 0px 0px;
 }
 .menu{
     display: flex;
@@ -180,6 +185,11 @@ li{
     font-family: 'Roboto', sans-serif;
     font-size: 21px;
 }
+.but-filter:hover {
+    background-color: white;
+    color:#2c6096;
+    transition: all .3s linear;
+}
 .p-filter{
     margin-top: 45px;
 }
@@ -198,4 +208,97 @@ li{
    
     color: #2c71b8;
     
+}
+.card-product{
+    height: 650px;
+    width: 270px;
+    border: solid 1px white;
+    margin-left: 30px;
+    margin-top: 30px;
+}
+.product{
+    display: flex;
+    flex-wrap: wrap;
+}
+.product p{
+    margin: 12px 15px;
+}
+
+.photo-product{
+    
+    height: 180px;
+    width: 270px;
+    background-color:white;
+    opacity: 0.7;
+    position: relative;
+  
+}
+.photo-fix{
+    
+    width: 30px;
+    height: 30px;
+    border: solid 1px #2c71b8;
+    position: absolute;
+    background-image: url("images/fix.png");
+    background-repeat:no-repeat;
+    background-position:center;
+    top:10px;
+    left:230px;
+}
+.like{
+    width: 30px;
+    height: 30px;
+    border: solid 1px #2c71b8;
+    position: absolute;
+    background-image: url("images/like.png");
+    background-repeat:no-repeat;
+    background-position:center;
+    top:50px;
+    left:230px;
+}
+.product-1{
+    background-image: url("images/product_1.png");
+    background-repeat:no-repeat;
+    background-position:center;
+}
+.text-bold{
+    font-weight: bold;
+}
+.top-size{
+    font-size: 30px;
+}
+.price{
+    text-align: center;
+    padding: 10px;
+}
+.price-down{
+    text-align: center;
+    font-weight: bold;
+    font-size: 48px;
+}
+.price-top{
+    font-weight: bold;
+}
+
+.but-details{
+    height: 50px;
+    width: 210px;
+    background-color:#2c71b8;
+    border:solid 1px white;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 21px;
+    margin-left: 30px;
+    margin-top: 15px;
+
+}
+.add-card{
+    height: 50px;
+    width: 210px;
+    background-color:#5d91c9;
+    opacity: 0.7;
+    margin-left: 30px;
+    margin-top: 15px;
+    color: white;
+    border: none;
 }
