--- a/style.css
+++ b/style.css
@@ -428,3 +428,49 @@ color: #ffffff;
 font-family: 'Roboto', sans-serif;
 
 }
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0,0,0,0.4);
+    display: none;
+    
+}
+.modal-block {
+    width: 300px;
+    height: 200px;
+    padding: 15px;
+    border:1px solid grey;
+    background-color: white;
+    margin: 100px auto;
+    text-align: center;
+}
+
+.form-field {
+    margin: 10px 0;
+}
+.form-field input {
+    width: 100%;
+    height: 25px;
+    padding: 7px;
+}
+.btn-close-wrap {
+    display: flex;
+    justify-content: end;
+}
+.btn-close {
+    cursor: pointer;
+}
+.show{
+    display: block;
+}
+.hide{
+    display: none;
+}
+.clickLike{
+    background-color:#2c6096;
+    background-image: url("images/whitelike.png")
+}
